🧪 Deploy with jekyll-cd

--- a/a-propos/index.html
+++ b/a-propos/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://www.aurelienrodot.com/a-propos/" />
 <meta property="og:site_name" content="Optimisteries" />
 <script type="application/ld+json">
-{"description":"Mon carnet de voyage de l’ordinaire. Pour apprécier aujourd’hui, et penser à demain.","author":{"@type":"Person","name":"Aurélien Rodot"},"url":"https://www.aurelienrodot.com/a-propos/","@type":"WebPage","headline":"À propos","@context":"https://schema.org"}</script>
+{"description":"Mon carnet de voyage de l’ordinaire. Pour apprécier aujourd’hui, et penser à demain.","headline":"À propos","url":"https://www.aurelienrodot.com/a-propos/","@type":"WebPage","author":{"@type":"Person","name":"Aurélien Rodot"},"@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css">
   <link rel="stylesheet" href="/css/lightbox.css">
