--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property="og:url" content="https://www.aurelienrodot.com/" />
 <meta property="og:site_name" content="Optimisteries" />
 <script type="application/ld+json">
-{"description":"Mon carnet de voyage de l’ordinaire. Pour apprécier aujourd’hui, et penser à demain.","author":{"@type":"Person","name":"Aurélien Rodot"},"url":"https://www.aurelienrodot.com/","@type":"WebSite","name":"Optimisteries","headline":"Optimisteries","@context":"https://schema.org"}</script>
+{"description":"Mon carnet de voyage de l’ordinaire. Pour apprécier aujourd’hui, et penser à demain.","headline":"Optimisteries","url":"https://www.aurelienrodot.com/","@type":"WebSite","name":"Optimisteries","author":{"@type":"Person","name":"Aurélien Rodot"},"@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css">
   <link rel="stylesheet" href="/css/lightbox.css">
