--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
 {"description":"Mon carnet de voyage de l’ordinaire. Pour apprécier aujourd’hui, et penser à demain.","headline":"Aurélien Rodot’s stuff","url":"https://www.aurelienrodot.com/404.html","@type":"WebPage","author":{"@type":"Person","name":"Aurélien Rodot"},"@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css">
-  <script type="text/javascript" src="/js/lightbox.js"></script><link type="application/atom+xml" rel="alternate" href="https://www.aurelienrodot.com/feed.xml" title="Aurélien Rodot's stuff" /></head>
+  <script type="text/javascript" src="/js/lightbox.js"></script></head>
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><a class="site-title" rel="author" href="/">Aurélien Rodot&#39;s stuff</a><nav class="site-nav">
@@ -57,7 +57,11 @@
 </div>
 
       </div>
-    </main><footer class="site-footer h-card">
+    </main><div class="banner">
+    Want more ? Get the <a href="https://c1b84406.sibforms.com/serve/MUIEAOkvAGBVXQmUNai_TjJrN6s50ffWdFGaJF5duSPDsRYHotQWwFEHM54lagk9ScdUwetgQFJE108sTlOnTsR3d4l4wVVm5loRvUaVm-nJ1ihXohvjFKxsyiv1uuGr3uVYIhrNdVg0g3slgQskUPhwTbWVxduZ11hHMbJktQ9dSlD86uzynj-D5TtXrEg9QqORiSmNI6_y7Fdy">newsletter</a> monthly.
+</div>
+  
+<footer class="site-footer h-card">
   <data class="u-url" href="/"></data>
 
   <div class="wrapper">
