--- a/about/index.html
+++ b/about/index.html
@@ -8,13 +8,13 @@
 <meta property="og:title" content="About" />
 <meta name="author" content="Aurélien Rodot" />
 <meta property="og:locale" content="en_US" />
-<meta name="description" content="Mon carnet de voyage de l’ordinaire. Pour apprécier aujourd’hui, et penser à demain." />
-<meta property="og:description" content="Mon carnet de voyage de l’ordinaire. Pour apprécier aujourd’hui, et penser à demain." />
+<meta name="description" content="Stuff I made, stuff I liked." />
+<meta property="og:description" content="Stuff I made, stuff I liked." />
 <link rel="canonical" href="https://www.aurelienrodot.com/about/" />
 <meta property="og:url" content="https://www.aurelienrodot.com/about/" />
 <meta property="og:site_name" content="Aurélien Rodot’s stuff" />
 <script type="application/ld+json">
-{"description":"Mon carnet de voyage de l’ordinaire. Pour apprécier aujourd’hui, et penser à demain.","headline":"About","url":"https://www.aurelienrodot.com/about/","@type":"WebSite","name":"Aurélien Rodot’s stuff","author":{"@type":"Person","name":"Aurélien Rodot"},"@context":"https://schema.org"}</script>
+{"description":"Stuff I made, stuff I liked.","headline":"About","url":"https://www.aurelienrodot.com/about/","@type":"WebSite","name":"Aurélien Rodot’s stuff","author":{"@type":"Person","name":"Aurélien Rodot"},"@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css">
   <script type="text/javascript" src="/js/lightbox.js"></script></head>
@@ -79,7 +79,7 @@ Nature, ecology, landscapes…</p>
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>Mon carnet de voyage de l&#39;ordinaire. Pour apprécier aujourd&#39;hui, et penser à demain.</p>
+        <p>Stuff I made, stuff I liked.</p>
       </div>
     </div>
 
